Bug 475702: nsICertOverrideService.rememberValidityOverride leaks an nsStringBuffer for each call. r=kaie